--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Tab Title</title>
+    <title>Letter Grades</title>
 
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
@@ -14,13 +14,44 @@
   </head>
 
   <body>
-    <h1>JS Basic Template</h1>
+    <h1>Determine Letter Grades</h1>
     <hr />
 
     <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus deserunt
-      deleniti, voluptatem voluptates dolore corrupti voluptatibus assumenda
-      vero dolores ad distinctio sequi consectetur explicabo recusandae.
+      Enter percentage grades for your core subjects and then click the
+      'Determine Letter Grades' button to convert percentage grades to letter
+      grades.
+    </p>
+
+    <hr />
+
+    <h3>English</h3>
+    <p>
+      Percentage Grade: <input type="number" id="eng-percent" /><br />
+      Letter Grade: <span id="eng-letter">-----</span>
+    </p>
+
+    <h3>Social Studies</h3>
+    <p>
+      Percentage Grade: <input type="number" id="soc-percent" /><br />
+      Letter Grade: <span id="soc-letter">-----</span>
+    </p>
+
+    <h3>Mathematics</h3>
+    <p>
+      Percentage Grade: <input type="number" id="math-percent" /><br />
+      Letter Grade: <span id="math-letter">-----</span>
+    </p>
+
+    <h3>Science</h3>
+    <p>
+      Percentage Grade: <input type="number" id="sci-percent" /><br />
+      Letter Grade: <span id="sci-letter">-----</span>
+    </p>
+    <hr />
+
+    <p>
+      <button id="btn">Determine Letter Grades</button>
     </p>
   </body>
 </html>
